--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,9 +53,9 @@
         </div> <!-- col -->
       </div> <!-- row -->
 
-      <%= link_to users_path, class: "btn btn-secondary my-3 btn-lg btn-block" do %>
-        Manage Users
-      <% end %>
+      <%= link_to "Manage Users", users_path, class: "btn btn-secondary my-3 btn-lg btn-block" %>
+      <%= link_to 'Manage Testimonials', home_testimonials_path, class: "btn btn-secondary my-3 btn-lg btn-block" %>
+
     <% end %>
 
 
