--- a/app/views/hardships/_form.html.erb
+++ b/app/views/hardships/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <p class="h4 mb-0 color-toca-red toca-uppercase">Part I:  Personal Information</p>
+  <p class="h4 mb-0 color-toca-red toca-uppercase">Part I:  Applicant Personal Information</p>
   <p><small>This information is anonymous and will not be seen by the deciding committee.</small></p>
 
   <div class="field mb-2">
@@ -19,7 +19,7 @@
   </div>
 
   <div class="md-form mt-4">
-    <label for="date">Date of Your Hardship Application (Today's Date)</label>
+    <label for="date">Date of Hardship Application (Today's Date)</label>
     <%= form.text_field :date, placeholder: "Select Application Date", class: "form-control datepicker", id: "date" %>
   </div>
 
@@ -34,7 +34,7 @@
   </div> <!-- row -->
 
   <div class="md-form mt-2">
-    <label for="start_date">Date You Started at TOCA</label>
+    <label for="start_date">Date Applicant Started at TOCA</label>
     <%= form.text_field :start_date, placeholder: "Select Start Date", class: "form-control datepicker", id: "start_date" %>
   </div>
 
@@ -49,7 +49,7 @@
   </div> <!-- row -->
 
   <div class="field">
-    <%= form.text_field :address, class: "form-control mb-4", placeholder: "Your Street Address", required: true %>
+    <%= form.text_field :address, class: "form-control mb-4", placeholder: "Applicant's Street Address", required: true %>
   </div>
 
   <div class="row">
@@ -165,6 +165,15 @@
     <h5 class="mb-3 toca-uppercase color-toca-red">Hardship Description</h5>
     <%= form.text_area :hardship_description, class: "form-control mb-4", placeholder: "Please describe your hardship", required: true %>
   </div>
+
+
+  <div class="row">
+    <div class="field form-check text-left">
+      <%= form.check_box :for_other, class: "form-check-input", id: "for_other" %>
+      <%= form.label "This hardship is for someone OTHER THAN myself.", class: "form-check-label", for: "for_other" %>
+    </div>
+  </div> <!-- row -->
+
 
   <hr class="mt-5 mb-4">
 
