--- a/app/views/hardships/show.html.erb
+++ b/app/views/hardships/show.html.erb
@@ -4,6 +4,10 @@
     <h1 class="text-center">Application for Hardship</h1>
 
     <p class="text-center">
+      <% if !@hardship.for_other %>
+        <strong>This application was submitted by another TOCA employee on behalf of the applicant.</strong>
+      <% end %>
+
       <%= @hardship.status %>
       <% if @hardship.returned %>
         &nbsp;&nbsp;|&nbsp;&nbsp;
