New Testimonial Email

--- a/app/views/testimonial_mailer/send_testimonial_email.html.erb
+++ b/app/views/testimonial_mailer/send_testimonial_email.html.erb
@@ -7,19 +7,20 @@
 
   <body>
     <hr style="border: 0; border-top: solid 2px #EB0029;" />
-    <h1 style="text-align: center">Create Your TOCA Cares Account</h1>
+    <h1 style="text-align: center">A New Testimonial was Just Submitted on TOCA Cares</h1>
     <hr style="border: 0; border-top: solid 2px #EB0029; margin-bottom: 25px" />
     <p>
-      You have been preauthorized as
-      <% if @authorization.admin && @authorization.committee %>
-        an admin and committee member
-      <% elsif @authorization.admin %>
-        an admin
-      <% elsif @authorization.committee %>
-        a committee member
-      <% end %>
-      at TOCA Cares.
-      Please <a href="https://tocacares.com/users/sign_up" style="color: #EB0029; font-weight: 700; text-decoration: none">create an account</a> using this email address to finish setting up your account.
+      As an admin, you have the power to approve submitted testimonials and choose to feature them on the website.
+      <br>Here's what was just submitted:
+    </p>
+    <p>
+      <strong><%= @testimonial.category %>:  <%= @testimonial.title %></strong>
+    </p>
+    <p>
+      <em><%= @testimonial.body %></em>
+    </p>
+    <p>
+      To approve or feature this new testimonial, sign into your TOCA Cares account and visit the <%= link_to "manage testimonials", home_testimonials_url, style: "color: #EB0029; font-weight: 700; text-decoration: none" %> page.
     </p>
     <p>
       If you have any issues, feel free to email us at <a href="mailto:admin@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">admin@tocacares.com</a>.
