--- a/app/views/preauthorization_mailer/send_preauthorization_email.html.erb
+++ b/app/views/preauthorization_mailer/send_preauthorization_email.html.erb
@@ -25,7 +25,7 @@
       If you have any issues, feel free to email us at <a href="mailto:admin@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">admin@tocacares.com</a>.
     </p>
     <hr style="border: 0; border-top: solid 2px #EB0029; margin-top: 25px" />
-    <img src="http://toca-cares.herokuapp.com/assets/TOCA_CARES_LOGO_FNL-6cee6bae57925544248a88c6a4cee53cdf909b8d32bfbc0f08a2429f3257cde9.png" style="width: 300px; display: block; margin-right: auto; margin-left: auto">
+    <img src="https://tocacares.s3-us-west-1.amazonaws.com/TOCA_CARES_LOGO_FNL.png" style="width: 300px; display: block; margin-right: auto; margin-left: auto">
     <hr style="border: 0; border-top: solid 2px #EB0029;" />
   </body>
 
