--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -92,7 +92,7 @@
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
-          <h5 class="font-weight-bold mb-3" id="Q24H">TOCA Cares will sponsor my education and cheritable endeavors?</h5>
+          <h5 class="font-weight-bold mb-3" id="Q24H">TOCA Cares will sponsor my education and charitable endeavors?</h5>
           <p class="color-dark-grey mb-0" id ="Q24P">
             Correct! If you have not used the fund towards any hardship expenses, TOCA Cares will sponsor a charity of your choice that you’re personally involved in or contribute towards you furthering your education. See the <%= link_to "apply", page_path(:apply) %> page for more information.
           </p>
@@ -123,7 +123,7 @@
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q7H">Do I have to contribute to the fund to be able to use it?</h5>
           <p class="color-dark-grey mb-0" id ="Q7P">
-            No.  All contributions are completely mandatory, but karma is a potent force.  Those who apply will be in the best position to see how important the community fund is.
+            No.  All contributions are completely optional, but karma is a potent force.  Those who apply will be in the best position to see how important the community fund is.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
