--- a/app/views/hardships/_form.html.erb
+++ b/app/views/hardships/_form.html.erb
@@ -11,8 +11,8 @@
     </div>
   <% end %>
 
-  <p class="h4 mb-0 color-toca-red toca-uppercase">Part I:  Applicant Personal Information</p>
-  <p><small>This information is anonymous and will not be seen by the deciding committee.</small></p>
+  <p class="h4 mb-0 color-toca-red toca-uppercase">Part I:  Personal Information</p>
+  <p><small>This section is for the personal information for the person undergoing the hardship.  Information in this section is anonymous and will not be seen by the deciding committee.</small></p>
 
   <div class="field mb-2">
     <%= form.text_field :full_name, class: "form-control mb-4", placeholder: "Full Name", required: true %>
@@ -49,7 +49,7 @@
   </div> <!-- row -->
 
   <div class="field">
-    <%= form.text_field :address, class: "form-control mb-4", placeholder: "Applicant's Street Address", required: true %>
+    <%= form.text_field :address, class: "form-control mb-4", placeholder: "Street Address", required: true %>
   </div>
 
   <div class="row">
@@ -174,6 +174,12 @@
     </div>
   </div> <!-- row -->
 
+  <div class="row" id="for_other_email_field" style="display: none">
+    <div class="field col-12">
+      <%= form.text_field :for_other_email, class: "form-control col-12 mb-4 mt-3", placeholder: "What is Your Non-TOCA Email Address?" %>
+    </div>
+  </div> <!-- row -->
+
 
   <hr class="mt-5 mb-4">
 
@@ -226,7 +232,12 @@
 
 
 <script>
-  $(function () {
-    $('.datepicker').pickadate();
-  })
+  $(document).ready(function () {
+    $('#for_other').change(function () {
+      $('#for_other_email_field').fadeToggle();
+    });
+    $(function () {
+      $('.datepicker').pickadate();
+    })
+  });
 </script>
