--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,6 +46,7 @@
 
       <h2 class="text-center toca-uppercase color-toca-red mt-5">Admin Actions</h2>
 
+      <%= link_to "Answer Questions", questions_path, class: "btn btn-secondary my-3 btn-lg btn-block" %>
       <%= link_to "Manage Users", users_path, class: "btn btn-secondary my-3 btn-lg btn-block" %>
       <%= link_to 'Manage Testimonials', home_testimonials_path, class: "btn btn-secondary my-3 btn-lg btn-block" %>
 
@@ -210,12 +211,14 @@
     <% end %> <!-- if charities.count >= 1 -->
 
     <% if @user.committee == false %>
-      <div class="text-center mb-5">
+      <div class="text-center my-5">
         <% if @user.committee_request == "Requested" %>
           <p><em>You have already requested to be a member of the deciding committee.</em></p>
         <% else %>
-            <p><em>Want to help decide which applications get approved for a TOCA Cares grant?
-              <br>Click <%= link_to "here", committee_request_path(@user), method: :post %> to request to serve as a member of the deciding committee.</em></p>
+          <p>
+            <em>Want to help decide which applications get approved for a TOCA Cares grant?
+            <br>Click <%= link_to "here", committee_request_path(@user), method: :post %> to request to serve as a member of the deciding committee.</em>
+          </p>
         <% end %>
       </div> <!-- committee request -->
     <% end %>
